# cartographer

./: .gitignore  CARTOGRAPHER_V0_MISSION_BRIEF.md  MISSION_INPUTS.md  README.md  cartographer_concept_board.md  pyproject.toml
data/: README.md
docs/source_methodology/: PROVENANCE.md
docs/source_methodology/canonical/: AUTONOMOUS_EXECUTION_GOVERNANCE.md  CARTRIDGE_CONTRACT.md  CARTRIDGE_LIFECYCLE_PROTOCOL.md  CERTIFICATION_STATE.md  FORWARD_PLAN.md  MAP_SPATIAL_PRIMER_v1.md  NORTH_STAR.md  ORACLE_POST_4B.md  PHASE_5_KICKOFF_CLOSE_2026_04_29.md  VAULT.md
docs/source_methodology/handovers/: CTO_HANDOVER_2026_04_25_LATE_EOD.md  PHASE_5_DAY_2026_04_30_EOD_HANDOVER.md  PHASE_5_DAY_2026_05_01_EVENING_SPRINT_HANDOVER_BROADCAST.md  PHASE_5_DAY_2026_05_01_FINAL_EOD_HANDOVER.md  PHASE_5_DAY_2026_05_01_FINAL_EVENING_HANDOVER.md  PHASE_5_DAY_2026_05_01_STAGE_2D_EOD_HANDOVER.md
docs/source_methodology/methodology/: ARS_CANON_v1_3.md  DAILY_MOMENTUM_BREAKOUT_CANON.md  HTF_MAP_SPEC_v0_1.yaml  METHODOLOGY_INDEX.md  STATE_DETECTION_LOGIC_v2.yaml  SYNTHETIC_OLYA_METHOD_vLOCK.yaml  calibration_results.yaml
docs/source_methodology/reviews/: 2026-04-23_olya_prep_evidence.md  2026-04-26_phase_4a_verification_pass.md  ADVISOR_REVIEW_2026_04_26.md  BRANCH_MAIN_RECONCILIATION_2026_04_27.md  CHART_TRUTH_COVERAGE_RESULTS_2026_04_25.md  COO_INPUTS_POST_PHASE_3.md  DMB_expressibility_review_2026_04_28.md  DOC_OWNERSHIP_AUDIT_2026_04_27.md  FIDELITY_AUDIT_AND_PATH_RECOMMENDATION_2026_04_24.md  HTF_MAP_SPEC_v0_11_GAP_ANALYSIS_2026_04_28.md  (+42 more)
scripts/: seed_data.py  seed_en1gma_ref.sh
(+19 files in other folders)
